--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<body>
              <!--Barra de Navegación-->
             <ul>
-                <li><a href="pagina1.html">Inicio</a></li>
+                <li><a href="index.html">Inicio</a></li>
                 <li><a href="pagina2.html">Bibliografía</a></li>
                 <li><a href="pagina3.html">Goles</a></li>
                 <li><a href="pagina4.html">Imagenes</a></li>
