--- a/pagina5.html
+++ b/pagina5.html
@@ -10,7 +10,7 @@
 <body>
     <!--Barra de Navegación-->
     <ul style="background-color: rgb(58, 82, 22); ">
-        <li><a href="pagina1.html">Inicio</a></li>
+        <li><a href="index.html">Inicio</a></li>
         <li><a href="pagina2.html">Bibliografía</a></li>
         <li><a href="pagina3.html">Goles</a></li>
         <li><a href="pagina4.html">Imagenes</a></li>
